force-app/main/default/objects/Checklist_Instance_Item__c/Checklist_Instance_Item__c.object-meta.xml
<CustomObject>
    <label>Checklist Instance Item</label>
    <nameField>
        <displayFormat>CII - {000000}</displayFormat>
        <label>Checklist Instance Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Instance Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>