force-app/main/default/objects/Checklist_Instance_Item__c/fields/Advise_312_response_date_will_affect_PTA__c.field-meta.xml
<CustomField>
    <fullName>Advise_312_response_date_will_affect_PTA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advise 312 response date-will affect PTA</label>
    <type>Checkbox</type>
</CustomField>