force-app/main/default/objects/Checklist_Instance_Item__c/fields/Application_filing_date__c.field-meta.xml
<CustomField>
    <fullName>Application_filing_date__c</fullName>
    <label>Application filing date</label>
    <type>Date</type>
</CustomField>