force-app/main/default/objects/Checklist_Instance_Item__c/fields/Attorney_Completed__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attorney Completed</label>
    <type>Checkbox</type>
</CustomField>