force-app/main/default/objects/Checklist_Instance_Item__c/fields/Awarded_by__c.field-meta.xml
<CustomField>
    <fullName>Awarded_by__c</fullName>
    <label>Awarded by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>