force-app/main/default/objects/Checklist_Instance_Item__c/fields/Checklist_Instance__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Instance__c</fullName>
    <label>Checklist Instance</label>
    <referenceTo>Checklist_Instance__c</referenceTo>
    <relationshipLabel>Checklist Instance Items</relationshipLabel>
    <relationshipName>Checklist_Instance_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>