force-app/main/default/objects/Checklist_Instance_Item__c/fields/Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Item</label>
    <referenceTo>Checklist_Item__c</referenceTo>
    <relationshipLabel>Checklist Instance Items</relationshipLabel>
    <relationshipName>Checklist_Instance_Items</relationshipName>
    <type>Lookup</type>
</CustomField>