force-app/main/default/objects/Checklist_Instance_Item__c/fields/Checklist_Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Parent_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Parent Section</label>
    <referenceTo>Checklist_Section__c</referenceTo>
    <relationshipLabel>Checklist Instance Items (Checklist Parent Section)</relationshipLabel>
    <relationshipName>Checklist_Instance_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>