force-app/main/default/objects/Checklist_Instance_Item__c/fields/Checklist_Section__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Section</label>
    <referenceTo>Checklist_Section__c</referenceTo>
    <relationshipLabel>Checklist Instance Items</relationshipLabel>
    <relationshipName>Checklist_Instance_Items</relationshipName>
    <type>Lookup</type>
</CustomField>