force-app/main/default/objects/Checklist_Instance_Item__c/fields/Client_Matter_No__c.field-meta.xml
<CustomField>
    <fullName>Client_Matter_No__c</fullName>
    <label>Client/Matter No</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>