force-app/main/default/objects/Checklist_Instance_Item__c/fields/Copy_included_Non_English_language__c.field-meta.xml
<CustomField>
    <fullName>Copy_included_Non_English_language__c</fullName>
    <label>Copy included Non-English language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Translation included</fullName>
            </value>
            <value>
                <fullName>Translation to be filed later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>