force-app/main/default/objects/Checklist_Instance_Item__c/fields/Disclosure_date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_date__c</fullName>
    <label>Disclosure date</label>
    <type>Date</type>
</CustomField>