force-app/main/default/objects/Checklist_Instance_Item__c/fields/Does_Applicant_qualify_as_a_Micro_Entity__c.field-meta.xml
<CustomField>
    <fullName>Does_Applicant_qualify_as_a_Micro_Entity__c</fullName>
    <label>Does Applicant qualify as a Micro Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes.  Neither Applicant nor inventors has filed more than four (4) applications and meets gross income limit (Form PTO/SB/15A included)</fullName>
            </value>
            <value>
                <fullName>Yes.  Applicant is employed or has assigned to Institution of Higher Learning (Form  PTO/SB/15B included)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>