force-app/main/default/objects/Checklist_Instance_Item__c/fields/Elements_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Elements_Claimed__c</fullName>
    <label>Elements Claimed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>