force-app/main/default/objects/Checklist_Instance_Item__c/fields/Errors_in_Claim_language_Accuracy_check__c.field-meta.xml
<CustomField>
    <fullName>Errors_in_Claim_language_Accuracy_check__c</fullName>
    <label>Errors in Claim language Accuracy check</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filing 312 Amendment with Response to Notice of Allowance (will affect PTA).</fullName>
            </value>
            <value>
                <fullName>Docket to File Certificate of Correction later.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>