force-app/main/default/objects/Checklist_Instance_Item__c/fields/Excluded_Countries__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Countries__c</fullName>
    <label>Excluded Countries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>South Korea</fullName>
            </value>
            <value>
                <fullName>Russian Federation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>