force-app/main/default/objects/Checklist_Instance_Item__c/fields/Explain_Why_you_are_not_enclosing_it__c.field-meta.xml
<CustomField>
    <fullName>Explain_Why_you_are_not_enclosing_it__c</fullName>
    <label>Explain why you are not enclosing it</label>
    <length>255</length>
    <type>Text</type>
</CustomField>