force-app/main/default/objects/Checklist_Instance_Item__c/fields/Figures__c.field-meta.xml
<CustomField>
    <fullName>Figures__c</fullName>
    <label>Figures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>