force-app/main/default/objects/Checklist_Instance_Item__c/fields/Grant_Number__c.field-meta.xml
<CustomField>
    <fullName>Grant_Number__c</fullName>
    <label>Grant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>