force-app/main/default/objects/Checklist_Instance_Item__c/fields/INCLUDED__c.field-meta.xml
<CustomField>
    <fullName>INCLUDED__c</fullName>
    <label>INCLUDED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formal</fullName>
            </value>
            <value>
                <fullName>Informal  (Suitable for publication)</fullName>
            </value>
            <value>
                <fullName>Informal  (NOT suitable for publication)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>