force-app/main/default/objects/Checklist_Instance_Item__c/fields/Includes_copies_of_newly_cited_art_ref__c.field-meta.xml
<CustomField>
    <fullName>Includes_copies_of_newly_cited_art_ref__c</fullName>
    <label>Includes copies of newly cited art &amp; ref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This IDS is complete with all information we have to date (docketing will close out initial IDS date)</fullName>
            </value>
            <value>
                <fullName>Please leave initial IDS due date open in docket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>