force-app/main/default/objects/Checklist_Instance_Item__c/fields/Independent_Claims__c.field-meta.xml
<CustomField>
    <fullName>Independent_Claims__c</fullName>
    <label>Independent Claims</label>
    <length>255</length>
    <type>Text</type>
</CustomField>