force-app/main/default/objects/Checklist_Instance_Item__c/fields/IPER_report_annexes_include_non_English__c.field-meta.xml
<CustomField>
    <fullName>IPER_report_annexes_include_non_English__c</fullName>
    <label>IPER report annexes include non-English</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Translation included</fullName>
            </value>
            <value>
                <fullName>Translation to be filed later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>