force-app/main/default/objects/Checklist_Instance_Item__c/fields/Mailed__c.field-meta.xml
<CustomField>
    <fullName>Mailed__c</fullName>
    <label>Mailed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail certificate: (1) includes mail certificate, and (2) is signed and dated</fullName>
            </value>
            <value>
                <fullName>Envelope: Preprinted envelope or label is used, addressed to:   MAIL STOP ISSUE FEE, Commissioner for Patents, P. O. Box 1450, Alexandria, VA 22313-1450</fullName>
            </value>
            <value>
                <fullName>Postcard:  (1) billing attorney initials, and (2) list of all papers being sent and the pages of each</fullName>
            </value>
            <value>
                <fullName>Envelope</fullName>
                <isActive>false</isActive>
                <label>Envelope</label>
            </value>
            <value>
                <fullName>Mail certificate test ontent</fullName>
                <isActive>false</isActive>
                <label>Mail certificate test ontent</label>
            </value>
            <value>
                <fullName>Postcard</fullName>
                <isActive>false</isActive>
                <label>Postcard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>