force-app/main/default/objects/Checklist_Instance_Item__c/fields/Please_Explain__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain__c</fullName>
    <label>Please Explain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>