force-app/main/default/objects/Checklist_Instance_Item__c/fields/Request_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Request_Signed_By__c</fullName>
    <label>Request Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>