force-app/main/default/objects/Checklist_Instance_Item__c/fields/Request_signed_for_applicant__c.field-meta.xml
<CustomField>
    <fullName>Request_signed_for_applicant__c</fullName>
    <label>Request signed for applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>