force-app/main/default/objects/Checklist_Instance_Item__c/fields/Requested_from_client_due_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_from_client_due_by__c</fullName>
    <label>Requested from client due by</label>
    <type>Date</type>
</CustomField>