force-app/main/default/objects/Checklist_Instance_Item__c/fields/Total_Claims__c.field-meta.xml
<CustomField>
    <fullName>Total_Claims__c</fullName>
    <label>Total Claims</label>
    <length>255</length>
    <type>Text</type>
</CustomField>