force-app/main/default/objects/Checklist_Instance_Item__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <label>Utility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All claims have been paid for</fullName>
            </value>
            <value>
                <fullName>Will be paid later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>