force-app/main/default/objects/Checklist_Instance_Item__c/fields/X12_mnts_from_this_appl_filing_date__c.field-meta.xml
<CustomField>
    <fullName>X12_mnts_from_this_appl_filing_date__c</fullName>
    <label>12-mnts from this appl filing date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>