force-app/main/default/objects/Checklist_Instance_Item__c/fields/X30_month_national_phase_deadline__c.field-meta.xml
<CustomField>
    <fullName>X30_month_national_phase_deadline__c</fullName>
    <label>30-month national phase deadline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>